product_docs/docs/jdbc_connector/42.2.8.1/04_installing_and_configuring_the_jdbc_connector/04_using_the_graphical_installer_to_install_the_connector.mdx
---
title: "Using the Graphical Installer to Install the Connector"
---

<div id="using_the_graphical_installer_to_install_the_connector" class="registered_link"></div>

You can use the EnterpriseDB Connectors Installation wizard to add the JDBC connector to your system; the wizard is available from [the EnterpriseDB Advanced Downloads page](https://www.enterprisedb.com/advanced-downloads).

This section demonstrates using the Installation Wizard to install the Connectors on a Windows system. (Download the installer, and then, right-click on the installer icon, and select `Run As Administrator` from the context menu.)

When the `Language Selection` popup opens, select an installation language and click `OK` to continue to the `Setup` window.

![*The JDBC Connector Installation wizard*](../images/jdbc_installation_wizard.png)

Click `Next` to continue.

![*The Installation dialog*](../images/jdbc_installation_dialog.png)

Use the `Installation Directory` dialog to specify the directory in which the connector will be installed, and click `Next` to continue.

![*The Ready to Install dialog*](../images/ready_to_install.png)

Click `Next` on the `Ready to Install` dialog to start the installation; popup dialogs confirm the progress of the installation wizard.

![*The installation is complete*](../images/jdbc_installation_complete.png)

When the wizard informs you that it has completed the setup, click the `Finish` button to exit the dialog.

You can also use StackBuilder Plus to add or update the connector on an existing Advanced Server installation; to open StackBuilder Plus, select StackBuilder Plus from the Windows `Apps` menu or through Linux `Applications` menu.

![*Starting StackBuilder Plus*](../images/starting_stackbuilder_plus.png)

When StackBuilder Plus opens, follow the onscreen instructions. Select the `EnterpriseDB JDBC Connector` option from the `Database Drivers` node of the tree control.

![*Selecting the Connectors installer*](../images/selecting_the_connectors_installer.png)

Follow the directions of the onscreen wizard to add or update an installation of the EnterpriseDB Connectors.
