product_docs/docs/jdbc_connector/42.3.3.1/04_installing_and_configuring_the_jdbc_connector/04_using_the_graphical_installer_to_install_the_connector.mdx
---
title: "Installing the Connector on Windows"
navTitle: "On Windows"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.3/using_the_graphical_installer_to_install_the_connector.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.9.1/using_the_graphical_installer_to_install_the_connector.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.8.1/using_the_graphical_installer_to_install_the_connector.html"
  - "/edb-docs/d/jdbc-connector/user-guides/jdbc-guide/42.2.12.1/using_the_graphical_installer_to_install_the_connector.html"
---

<div id="using_the_graphical_installer_to_install_the_connector" class="registered_link"></div>

There are two steps to performing an installation:

- Installing the connector
- Initial configuration

## Install the Connector

You can use the EDB Connectors Installation wizard to add the JDBC connector to your system; the wizard is available at the [EDB website](https://www.enterprisedb.com/software-downloads-postgres/).

This section demonstrates using the Installation Wizard to install the Connectors on a Windows system. To open the Installation Wizard, download the installer, and then, right-click on the installer icon, and select `Run As Administrator` from the context menu.

When the `Language Selection` popup opens, select an installation language and click `OK` to continue to the `Setup` window.

![The JDBC Connector Installation wizard](../images/jdbc_installation_wizard.png)

The JDBC Connector Installation wizard

Click `Next` to continue.

![The Installation dialog](../images/jdbc_installation_dialog.png)

The Installation dialog

Use the `Installation Directory` dialog to specify the directory in which the connector will be installed, and click `Next` to continue.

![The Ready to Install dialog](../images/ready_to_install.png)

The Ready to Install dialog

Click `Next` on the `Ready to Install` dialog to start the installation; popup dialogs confirm the progress of the installation wizard.

![The installation is complete](../images/jdbc_installation_complete.png)

The installation is complete

When the wizard informs you that it has completed the setup, click the `Finish` button to exit the dialog.

You can also use StackBuilder Plus to add or update the connector on an existing Advanced Server installation; to open StackBuilder Plus, select StackBuilder Plus from the Windows `Apps` menu.

![Starting StackBuilder Plus](../images/starting_stackbuilder_plus.png)

Starting StackBuilder Plus

When StackBuilder Plus opens, follow the onscreen instructions. Select the `EnterpriseDB JDBC Connector` option from the `Database Drivers` node of the tree control.

![Selecting the Connectors installer](../images/selecting_the_connectors_installer.png)

Selecting the Connectors installer

Follow the directions of the onscreen wizard to add/update an installation of the EDB Connectors.

## Initial configuration

edb-jdbc18.jar supports JDBC version 4.2.

To make the JDBC driver available to Java, you must either copy the appropriate java `.jar` file for the JDBC version that you are using to your `$java_home/jre/lib/ext` directory or append the location of the `.jar` file to the `CLASSPATH` environment variable.

If you choose to append the location of the `jar` file to the `CLASSPATH` environment variable, you must include the complete pathname:

 `/usr/edb/jdbc/edb-jdbc18.jar`

